# grim-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: capture_benchmarks.rs  encode_benchmarks.rs
src/: lib.rs  wayland_capture.rs
